cmake_minimum_required(VERSION 3.14)
project(manager)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
find_package(Boost REQUIRED COMPONENTS filesystem thread)
find_package(OpenCV REQUIRED )
include_directories(${Boost_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
add_executable(manager ./opencv.cpp)
target_link_libraries(manager ${Boost_LIBRARIES} ${OpenCV_LIBRARIES})