cmake_minimum_required(VERSION 3.14)
project(manager)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
message(STATUS "${CMAKE_CXX_FLAGS} -pthread")
find_package(Boost REQUIRED COMPONENTS filesystem thread)
find_package(OpenCV REQUIRED )
find_package(VTK REQUIRED )
message(STATUS " OpenCV_Version:${OpenCV_VERSION}") #Opencv_Version前面有空格,message的作用是向用户显示一条信息
message(STATUS " Boost_Version:${Boost_VERSION}")
message(STATUS " Boost_Version:${VTK_VERSION}")
include_directories(${Boost_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${VTK_INCLUDE_DIRS})
add_executable(manager ./opencv.cpp)
target_link_libraries(manager ${Boost_LIBRARIES} ${OpenCV_LIBRARIES} ${VTK_LIBRARIES})